# Order-service

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: main.py
app/application/dto/: __init__.py  inbox.py  notification.py  order.py  outbox.py  payment.py
app/application/enums/: events.py
app/application/interfaces/: __init__.py  catalog.py  contracts.py  http_client_protocol.py  message_broker.py  notifications.py  payments.py  repository.py  uow.py
app/application/use_cases/: __init__.py  create_order.py  create_payment.py  payments_response.py  register_shipping.py  send_notification.py  shipping_response.py  update_status.py
app/core/enums/: order.py
app/core/exceptions/: __init__.py  contracts.py  order.py
app/core/models/: order.py
app/core/value_objects/: item.py
app/infrastructure/: __init__.py  inbox_worker.py  outbox_worker.py  uow.py
app/infrastructure/adapters/: __init__.py  catalog.py  contracts.py  httpx_client.py  notifications.py  payments.py
app/infrastructure/broker/: __init__.py  consumer.py  producer.py
app/infrastructure/config/: __init__.py  cache_client.py  database.py  http_client.py  kafka_config.py  logging.py  settings.py
app/infrastructure/exceptions/: cache_exc.py  http_exc.py  payment_exc.py
app/infrastructure/ioc_container/: container.py  providers.py
app/presentation/: exc_handlers.py
migrations/: env.py
migrations/versions/: f0ecaa8f00a7_initial_migration.py
(+31 files in other folders)
